# photon

./: Cargo.toml  README.md
src/: filter.rs  lib.rs  main.rs  query.rs  resultset.rs  server.rs
src/api/: fields.rs  mod.rs  query.rs  root.rs
src/config/: dataset.rs  mod.rs
src/parser/: casts.rs  dissect.rs  json.rs  mod.rs  timestamp.rs  user_agent.rs
src/source/: file.rs  mod.rs
ui/: .gitignore  DatasetView.tsx  HomeView.tsx  Sidebar.tsx  Table.tsx  api.tsx  app.tsx  icons.tsx  package-lock.json  package.json  req.tsx  state.tsx  tsconfig.json  util.tsx
ui/www/: index.html  style.css
