[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
hyper = { version = "0.14.17", features = ["server", "http1", "tcp"] }
indexmap = { version = "1.8.0", features = ["serde-1"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5.8"
woothee = "0.13.0"

