[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.11.1", features = ["collections"] }
clap = { version = "4.0.18", features = ["derive"] }
flate2 = "1.0.22"
glob = "0.3.0"
hyper = { version = "0.14.17", features = ["server", "http1", "tcp"] }
indexmap = { version = "1.8.0", features = ["serde-1"] }
natord = "1.0.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.30"
time = { version = "0.3.16", features = ["parsing", "macros", "formatting", "serde-well-known"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.5.8"
woothee = "0.13.0"

